--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.0.0"
+    "ember-cli-babel": "^5.0.0",
+    "ember-cli-htmlbars": "0.7.4"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
